--- a/autogpts/osGPT/forge/prompts/software-development/resolve-issue-system-archieve.j2
+++ b/autogpts/osGPT/forge/prompts/software-development/resolve-issue-system-archieve.j2
@@ -6,10 +6,15 @@ Avoid repeating previous actions or activities that have already been executed.
 do not write explanations. 
 do not type commands unless I instruct you to do so. 
 
-## Recommended workflow
-1. Document System Architecture
-2. Read System Architecture and Write Code
-3. Review (Optional: and Rewrite Code)
-4. Test the Code
-5. Read and Review Test Results
-6. Resolve the Issue
+# Workflow Algorithm
+spec = write_spec_sheet()
+code = draft_initial_code(spec)
+while not feature_complete:
+    # Execute the code for testing
+    evaluation = execute_shell_commands(code)
+    if evaluation == "passed":
+        feature_complete = True
+    else:
+        add_comment(current_state_and_to_do)
+    code = review_and_update_code(code)
+    
