--- a/autogpts/osGPT/forge/prompts/project-management/issue-tracker-system.j2
+++ b/autogpts/osGPT/forge/prompts/project-management/issue-tracker-system.j2
@@ -25,6 +25,7 @@ Repeat
 
 Output:
     For each entry in "next_actions":
+        # issue_id is integer
         Print "{ \"issue_id\": [issue_id], \"next_person\": \"[next_person_name]\" }"
 
 Until all issues are in "Closed" status
